<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="order"
            type="com.laborder.bl.models.CreateOrder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.CreateRoomFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:text="@={order.title}" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_lab"
                    android:text="@={`` + order.currentLab}" />

                <CheckBox
                    android:id="@+id/use_priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/use_priority"
                    android:checked="@={order.usePriority}" />


                <Button
                    android:id="@+id/create_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>